log
Sat 30 Mar 2024 09:19:09 PM UTC: 
 list.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07d0866
Sat 30 Mar 2024 09:20:20 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1b221cf
Sat 30 Mar 2024 09:21:34 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1c6689c
Sat 30 Mar 2024 09:21:39 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e1b1329
Sat 30 Mar 2024 09:22:46 PM UTC: 
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:34:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:41:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   41 |   if(L->size == 0) {
      |       ^~
list.c:45:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   45 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:50:6: error: ‘L’ undeclared (first use in this function)
   50 |   if(L->current < L->size - 1) {
      |      ^
list.c:50:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ec1c296
Sat 30 Mar 2024 09:24:54 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:35:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   L->size = NULL;
      |    ^~
list.c: In function ‘first’:
list.c:43:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if(L->size == 0) {
      |       ^~
list.c:47:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   47 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:52:6: error: ‘L’ undeclared (first use in this function)
   52 |   if(L->current < L->size - 1) {
      |      ^
list.c:52:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c425500
Sat 30 Mar 2024 09:25:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘create_list’:
list.c:35:4: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   L->size = 0;
      |    ^~
list.c: In function ‘first’:
list.c:43:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   43 |   if(L->size == 0) {
      |       ^~
list.c:47:11: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   47 |   return L->data[L->current];
      |           ^~
list.c: In function ‘nextList’:
list.c:52:6: error: ‘L’ undeclared (first use in this function)
   52 |   if(L->current < L->size - 1) {
      |      ^
list.c:52:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘first’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dca90ef
Sat 30 Mar 2024 10:02:10 PM UTC: 
 list.c | 26 +++-----------------------
 1 file changed, 3 insertions(+), 23 deletions(-)
 tests:  0|6
total_score: 0/70
d768fb8
Sat 30 Mar 2024 10:02:45 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:38:1: error: expected identifier or ‘(’ before ‘}’ token
   38 | }
      | ^
Compilation failed
e8895d1
Sat 30 Mar 2024 10:02:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7668c76
Sat 30 Mar 2024 10:05:30 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6bb556f
Sat 30 Mar 2024 10:05:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
43ff724
Sat 30 Mar 2024 10:11:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aa00c67
Sat 30 Mar 2024 10:11:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
68de6a9
Sat 30 Mar 2024 10:11:32 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
c477c39
Sat 30 Mar 2024 10:11:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3b91187
